Bug 368885 - The plasma panel has no shadow on Wayland
Summary: The plasma panel has no shadow on Wayland
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: generic-wayland (other bugs)
Version First Reported In: 5.7.95
Platform: Arch Linux Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-09-16 07:52 UTC by tromzy
Modified: 2017-08-17 15:49 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
This is the shadow the panel is supposed to have on Wayland (X11 screenshot). (15.64 KB, image/png)
2016-09-16 07:53 UTC, tromzy
Details

Note You need to log in before you can comment on or make changes to this bug.
Description tromzy 2016-09-16 07:52:16 UTC
On a Wayland session, the plasma panel has no shadow  (the nice line at the top of the panel, see the X11 screenshot as I can't make a screenshot on Wayland).

Reproducible: Always

Steps to Reproduce:
1. open a Wayland session with a Plasma desktop that has a panel.
2.
3.

Actual Results:  
The panel has no shadow like it has on X11.
Comment 1 tromzy 2016-09-16 07:53:10 UTC
Created attachment 101113 [details]
This is the shadow the panel is supposed to have on Wayland (X11 screenshot).
Comment 2 Michael D 2016-10-18 20:29:36 UTC
Still present in Plasma 5.8.1 (KDE Neon).
Comment 3 Martin Flöser 2016-10-19 08:48:08 UTC
Possible patch at https://phabricator.kde.org/D3109
Comment 4 Martin Flöser 2016-10-19 11:04:17 UTC
Git commit 59733c21a4bb0d04bb76367995aa611e66f5f3e5 by Martin Gräßlin.
Committed on 19/10/2016 at 11:04.
Pushed by graesslin into branch 'master'.

[shell] Create panelshadow in surfacecreated event instead of show event

Summary:
In the show event the Wayland implementation does not pick up the shadow
at all.

Test Plan: Shadow on Wayland, not tested on X11

Reviewers: #plasma, mart

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D3109

M  +1    -1    shell/panelview.cpp

http://commits.kde.org/plasma-workspace/59733c21a4bb0d04bb76367995aa611e66f5f3e5
Comment 5 tromzy 2017-06-19 14:23:16 UTC
I'm reopening this bug, because on Plasma 5.10, at session opening, the Plasma panel does not have shadow  (but other plasma elements do : K menu has shadow, systray menu has shadow...) ; I'm using Breeze Dark : if I change the Plasma theme to something else and then switches back to Breeze Dar, the shadow is there again.
Comment 6 Alexander Mentyu 2017-08-17 13:03:15 UTC
This bug no longer appears for me in:

Distribution: KDE neon Developer Edition Unstable Branches
KDE Plasma Version: 5.10.90
KDE Frameworks Version: 5.37.0
Qt Version: 5.9.1
Kernel Version: 4.10.0-32-generic
OS Type: 64-bit
Comment 7 Martin Flöser 2017-08-17 15:49:35 UTC
Thanks for the feedback. I mark as fixed, if you see it again please reopen.