[shell] Create panelshadow in surfacecreated event instead of show event

Summary:
In the show event the Wayland implementation does not pick up the shadow
at all.

BUG: 368885

Test Plan: Shadow on Wayland, not tested on X11

Reviewers: #plasma, mart

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D3109